# TaskMaster

./: Cargo.toml  README.md  note_log.txt  test.txt
configurations/supervisord/: config1.conf  config2.conf
configurations/taskmaster/: config.yaml
src/: lib.rs
src/client/: editor.rs  history.rs  mod.rs
src/server/: conf.rs  file.rs  log.rs  loop_exec.rs  mod.rs  parse.rs  proc.rs  task.rs  tool.rs
tests/: ignore_sigtem.yaml
tests/procs/: ignore_sigterm.py
to_do_bonus/: html_method.rs  index_cpy.html
