[package]
name = "ft_taskmaster"
version = "0.1.0"
edition = "2021"

[lib]
name = "share_structures"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server/mod.rs"

[[bin]]
name = "client"
path = "src/client/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
chrono = "0.4.23"
# SIG
nix = "0.26.1"
# signal-hook = "0.3.14"
sha-1 = "0.10.1"
hex = "0.4.3"
termion = "2.0.1"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
